--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
-	"name" : "wikifab/flow-counter-talks",
-	"description" : "Extension which displays talks' number next this tab. ",
-	"type" : "mediawiki-extension"
+    "name": "wikifab/flow-counter-talks",
+    "description": "This is a mediawiki extension to add a counter on discussion tab (using Flow)",
+    "type": "mediawiki-extension",
+    "require": {
+    }
 }
